--- a/package.json
+++ b/package.json
@@ -3,13 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^4.19.5",
+    "axios": "^0.26.1",
+    "connected-react-router": "^6.9.2",
+    "core-js": "^3.22.0",
+    "formik": "^2.2.9",
+    "history": "4.10.1",
+    "i18next": "^21.6.16",
+    "i18next-xhr-backend": "^3.2.2",
+    "lodash": "^4.17.21",
+    "node-sass": "5.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.6",
+    "react-icons": "^4.3.1",
+    "react-query": "^3.35.0",
+    "react-redux": "^8.0.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "store2": "^2.13.2",
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.9.2"
   }
 }
