--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.21",
     "node-sass": "5.0.0",
     "react": "^18.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.6",
     "react-icons": "^4.3.1",
@@ -33,6 +34,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "store2": "^2.13.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
