--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "classnames": "^2.3.1",
     "connected-react-router": "^6.9.2",
     "core-js": "^3.22.0",
     "formik": "^2.2.9",
@@ -27,6 +28,7 @@
     "react-query": "^3.35.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "5.2.0",
+    "react-router-query-hooks": "^2.2.0",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
