--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.6",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-query": "^3.35.0",
     "react-redux": "^8.0.0",
     "react-router-dom": "5.2.0",
