--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@chatscope/chat-ui-kit-react": "^1.8.3",
-    "@chatscope/chat-ui-kit-styles": "^1.2.3",
     "@sentry/react": "^6.19.6",
     "@sentry/tracing": "^6.19.6",
     "@testing-library/jest-dom": "^5.14.1",
@@ -13,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.19.5",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.2",
     "core-js": "^3.22.0",
@@ -24,6 +23,7 @@
     "node-sass": "5.0.0",
     "react": "^18.0.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.6",
     "react-icons": "^4.3.1",
