--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@webpack-cli/generators": "^2.4.2",
     "css-loader": "^6.7.1",
+    "faker": "5.5.3",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
     "sass": "^1.50.1",
