--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "css-loader": "^6.7.1",
     "faker": "5.5.3",
     "html-webpack-plugin": "^5.5.0",
-    "node-sass": "5.0.0",
+    "node-sass": "^5.0.0",
     "prettier": "^2.6.2",
     "sass": "^1.50.1",
     "sass-loader": "^12.6.0",
