--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "digital-sass-js",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "test:cypress": "cypress open",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@sentry/react": "^6.19.6",
@@ -42,12 +49,6 @@
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -69,6 +70,9 @@
   "devDependencies": {
     "@webpack-cli/generators": "^2.4.2",
     "css-loader": "^6.7.1",
+    "cypress": "^10.9.0",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
     "faker": "5.5.3",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
